--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Music Streaming Service</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-$END$
+<header>
+    <nav>
+        <a href="index2.html">Home</a>
+        <a href="#">Playlists</a>
+        <a href="#">Artists</a>
+        <a href="index4.html">Albums</a>
+        <a href="#">Songs</a>
+        <a href="index.html">Log In</a>
+    </nav>
+</header>
+<main>
+    <div class="container">
+        <h1>Welcome to our Music Streaming Service</h1>
+        <p>Here you can create your own playlists, discover new music, and listen to your favorite artists and albums.</p>
+        <a href="#" class="btn">Get Started</a>
+    </div>
+</main>
+<footer>
+    <p>&copy; 2023 Music Streaming Service</p>
+</footer>
 </body>
 </html>
