--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Music Service</title>
+  <link rel="stylesheet" type="text/css" href="style3.css">
 </head>
 <body>
-$END$
+<header>
+  <div class="container">
+    <div class="logo">
+      <h1>Music Service</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">Артисти</a></li>
+        <li><a href="#">Плейлисти</a></li>
+        <li><a href="#">Увійти</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<section class="get-started">
+  <div class="container">
+    <h2>Почніть користуватися сервісом</h2>
+    <div class="buttons">
+      <a href="#" class="button-primary">Увійти</a>
+      <a href="#" class="button-secondary">Зареєструватися</a>
+    </div>
+  </div>
+</section>
+<section class="artists">
+  <div class="container">
+    <h2>Артисти</h2>
+    <!-- Вміст розділу Артисти -->
+  </div>
+</section>
+<section class="playlists">
+  <div class="container">
+    <h2>Плейлисти</h2>
+    <!-- Вміст розділу Плейлисти -->
+  </div>
+</section>
 </body>
 </html>
