--- a/index4.html
+++ b/index4.html
@@ -2,9 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+
+  <title>Albums</title>
+  <link rel="stylesheet" href="style4.css">
 </head>
 <body>
-$END$
-</body>
-</html>
+<header>
+  <nav>
+    <a href="index2.html">Home</a>
+    <a href="#">Playlists</a>
+    <a href="#">Artists</a>
+    <a href="index4.html">Albums</a>
+
+    <a href="#">Songs</a>
+    <a href="#">Log In</a>
+  </nav>
+</header>
+
+
+<section class="albums">
+  <div class="container">
+    <h2>Albums</h2>
+    <div class="album-row">
+      <div class="album-col">
+        <a href="#">
+          <img src="009111c1b66c23275e724a55d2cb713c.jpg" alt="Album 1">
+          <h3>The 50 Best Weeknd Songs</h3>
+          <p>The Weeknd</p>
+        </a>
+      </div>
+      <div class="album-col">
+        <a href="#">
+          <img src="6b14acb192bb3639fd8367ca331399e9.jpg" alt="Album 2">
+          <h3>Phonk</h3>
+          <p>The best songs</p>
+        </a>
+      </div>
+    </div>
+    <ul class="album-list">
+      <li>
+        <a href="#">
+          <img src="31b59b1e61aec5fba6e28308d040561c.jpg" alt="Album 3">
+          <h3>Top 20 Ukrainian songs</h3>
+          <p>Kalush-Стефанія</p>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="60b01bb65e59e15fee63f73f375b60b5.jpg" alt="Album 4">
+          <h3>Top 100: Global</h3>
+          <p>1st place:Miley Cyrus - Flowers</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
+
