--- a/playlists.html
+++ b/playlists.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Playlist</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
-</body>
-</html>
+<div class="container">
+  <h1>Create a Playlist</h1>
+  <form class="playlist-form">
+    <div class="form-group">
+      <label for="playlist-name">Playlist Name</label>
+      <input type="text" id="playlist-name" name="playlist-name" placeholder="Enter playlist name...">
+    </div>
+    <div class="form-group radio-group">
+      <label for="public-radio">
+        <input type="radio" id="public-radio" name="playlist-type" value="public" checked>
+        Public
+      </label>
+      <label for="private-radio">
+        <input type="radio" id="private-radio" name="playlist-type" value="private">
+        Private
+      </label>
+    </div>
