--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 </head>
 <header>
     <nav>
-        <a href="#">Home</a>
-        <a href="#">Playlists</a>
-        <a href="#">Artists</a>
-        <a href="#">Albums</a>
-        <a href="#">Songs</a>
+        <a href="index2.html">Home</a>
+        <a href="playlists.html">Playlists</a>
+        <a href="artist.html">Artists</a>
+        <a href="index4.html">Albums</a>
+        <a href="songs.html">Songs</a>
         <a href="index.html">Log In</a>
-    </nav>
 </header>
 
 <body>
