--- a/playlists.html
+++ b/playlists.html
@@ -4,11 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Playlist</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="playlists.css">
 </head>
 <body>
+<header>
+  <nav>
+    <a href="index2.html">Home</a>
+    <a href="playlists.html">Playlists</a>
+    <a href="artist.html">Artists</a>
+    <a href="index4.html">Albums</a>
+    <a href="songs.html">Songs</a>
+    <a href="index.html">Log In</a>
+  </nav>
+</header>
 <div class="container">
   <h1>Create a Playlist</h1>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
   <form class="playlist-form">
     <div class="form-group">
       <label for="playlist-name">Playlist Name</label>
@@ -24,3 +36,12 @@
         Private
       </label>
     </div>
+    <button type="submit" class="btn-next">Next</button>
+    <footer>
+      <div class="container">
+        <img src="кружечки3.jpg" alt="Bottom Image" class="bottom-image">
+
+      </div>
+    </footer>
+
+  </form>
