--- a/index2.html
+++ b/index2.html
@@ -6,22 +6,32 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+</svg>
 <header>
     <nav>
         <a href="index2.html">Home</a>
-        <a href="#">Playlists</a>
-        <a href="#">Artists</a>
+        <a href="playlists.html">Playlists</a>
+        <a href="artist.html">Artists</a>
         <a href="index4.html">Albums</a>
-        <a href="#">Songs</a>
+        <a href="songs.html">Songs</a>
         <a href="index.html">Log In</a>
     </nav>
 </header>
 <main>
     <div class="container">
-        <h1>Welcome to our Music Streaming Service</h1>
+        <h1>Welcome to our  Streaming Service
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-music-note-beamed" viewBox="0 0 16 16" >
+            <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z"/>
+            <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
+            <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
+
+        </svg></h1>
+
         <p>Here you can create your own playlists, discover new music, and listen to your favorite artists and albums.</p>
         <a href="#" class="btn">Get Started</a>
+        <img src="Screenshot_2.png" alt="Image">
     </div>
+
 </main>
 <footer>
     <p>&copy; 2023 Music Streaming Service</p>
