--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
   <title>Albums</title>
   <link rel="stylesheet" href="style4.css">
 </head>
@@ -10,12 +9,11 @@
 <header>
   <nav>
     <a href="index2.html">Home</a>
-    <a href="#">Playlists</a>
-    <a href="#">Artists</a>
+    <a href="playlists.html">Playlists</a>
+    <a href="artist.html">Artists</a>
     <a href="index4.html">Albums</a>
-
-    <a href="#">Songs</a>
-    <a href="#">Log In</a>
+    <a href="songs.html">Songs</a>
+    <a href="index.html">Log In</a>
   </nav>
 </header>
 
@@ -26,14 +24,14 @@
     <div class="album-row">
       <div class="album-col">
         <a href="#">
-          <img src="009111c1b66c23275e724a55d2cb713c.jpg" alt="Album 1">
+          <img src="009111c1b66c23275e724a55d2cb713c.jpg" alt="Album 1"  width="200" height="200">
           <h3>The 50 Best Weeknd Songs</h3>
           <p>The Weeknd</p>
         </a>
       </div>
       <div class="album-col">
         <a href="#">
-          <img src="6b14acb192bb3639fd8367ca331399e9.jpg" alt="Album 2">
+          <img src="6b14acb192bb3639fd8367ca331399e9.jpg" alt="Album 2"  width="200" height="200">
           <h3>Phonk</h3>
           <p>The best songs</p>
         </a>
@@ -56,5 +54,6 @@
       </li>
     </ul>
   </div>
+
 </section>
 
